package cz.roman.spanek.psi.uml.polymorphism.customer;

public abstract class Customer {
    public abstract double getDiscount();
}
